qnode41_prod_arch_env/inicials/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qnode41-app-v1
  namespace: qnode41
spec:
  selector:
    matchLabels:
      app: qnode41-app-v1
  replicas: 2
  template:
    metadata:
      labels:
        app: qnode41-app-v1
    spec:
      containers:
      - name: qnode41-app-v1
        image: smartquail/qnode4.1_app:latest
        resources:
         requests:
            memory: "64Mi"
            cpu: "200m"
         limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 9000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: qnode41-app-v2
  namespace: qnode41
spec:
  selector:
    matchLabels:
      app: qnode41-app-v2
  replicas: 2
  template:
    metadata:
      labels:
        app: qnode41-app-v2
    spec:
      containers:
      - name: qnode41-app-v2
        image: smartquail/qnode4.1_app:latest
        resources:
         requests:
            memory: "64Mi"
            cpu: "200m"
         limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 9000
