qnode41_prod_arch_env/inicials/03-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qnode41-app-v1
  namespace: qnode41
spec:
  ports:
  - port: 9000
    targetPort: 9000
  selector:
    role: qnode41-app-v1

---
apiVersion: v1
kind: Service
metadata:
  name: qnode41-app-v2
  namespace: qnode41
spec:
  ports:
  - port: 9000
    targetPort: 9000
  selector:
    role: qnode41-app-v2
